Pull request #83: [OSO-530] - Virtualization GA updates
Merge in OSO/openshift-terraform-stack from davidfos/virt-doc-adjustments to master

Squashed commit of the following:

commit 92dae9466e54a8340b82f4ec6270eece504a27fb
Author: davidfos <david.d.foster@oracle.com>
Date:   Tue Sep 16 11:29:34 2025 -0700

    add snapshot class by default

commit e2ea9239330f8e550da72ff7c6e425f40186c1cc
Author: davidfos <david.d.foster@oracle.com>
Date:   Tue Sep 16 11:29:23 2025 -0700

    update virt readme

--- a/custom_manifests/manifests/01-oci-csi.yml
+++ b/custom_manifests/manifests/01-oci-csi.yml
@@ -517,17 +517,17 @@ parameters:
 
 ---
 
-# # https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/volume-snapshot-and-restore-using-csi.md
-# apiVersion: snapshot.storage.k8s.io/v1
-# kind: VolumeSnapshotClass
-# metadata:
-#   name: oci-snapshot
-#   annotations:
-#     snapshot.storage.kubernetes.io/is-default-class: "true"
-# driver: blockvolume.csi.oraclecloud.com
-# parameters:
-#   backupType: full
-# deletionPolicy: Delete
+# https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/volume-snapshot-and-restore-using-csi.md
+apiVersion: snapshot.storage.k8s.io/v1
+kind: VolumeSnapshotClass
+metadata:
+  name: oci-snapshot
+  annotations:
+    snapshot.storage.kubernetes.io/is-default-class: "true"
+driver: blockvolume.csi.oraclecloud.com
+parameters:
+  backupType: full
+deletionPolicy: Delete
 
 ---
 
